correct implementation of alignfull function

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -11,7 +11,8 @@ body {
   font-size:$font-size;
   line-height:normal;
   background-color: $body-background-color;
-  overflow-x:hidden;
+  width: 100%;
+  overflow-x: hidden;
 
   @media (max-width:$breakpoint-phone-portrait) {
     font-size:$font-size-mobile;
