--- a/src/css/wordpresscore.scss
+++ b/src/css/wordpresscore.scss
@@ -109,6 +109,11 @@ a img.aligncenter {
 // gutenberg front end
 .alignfull {
   width: 100vw;
-  max-width:100vw;
-  margin-left: calc(50% - 50vw);
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+  padding-left:1em;
+  padding-right:1em;
 }
